--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,24 @@
 asgiref==3.9.1
+attrs==25.3.0
 certifi==2025.7.14
 cloudinary==1.44.1
 Django==5.2.4
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
+drf-spectacular==0.28.0
+drf-spectacular-sidecar==2025.7.1
+inflection==0.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+pillow==11.3.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-decouple==3.8
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.26.0
 six==1.17.0
 sqlparse==0.5.3
+uritemplate==4.2.0
 urllib3==2.5.0
