master :: Gunicorn dependancy

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,9 +8,11 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.28.0
 drf-spectacular-sidecar==2025.7.1
+gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
+packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
